# buaa-minisysy

./: .clang-tidy  CMakeLists.txt  compile_flags.txt  test.sh
labLexer/: lexer.cpp  test.sh
labLexer/tests/: 1.in  1.out  2.in  3.in
libsysy/: libsysy.c  libsysy.h  libsysy.ll
src/: ast.hpp  codegen.cpp  codegen.hpp  domination_test.cpp  ir.cpp  ir.hpp  ir_builder.cpp  ir_builder.hpp  lexer.cpp  lexer.hpp  main.cpp  mem2reg.cpp  mem2reg.hpp  mem2reg_main.cpp  overloaded.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp  vreg_assigner.cpp  vreg_assigner.hpp
tests/: lab1-1.out  lab1-3.in  lab1-3.out  lab2-1.in  lab2-1.ll  lab2-2.in  lab2-2.ll  lab2-3.in  lab2-4.in  lab2-4.ll  lab2-5.in  lab2-5.ll  lab2-6.in  lab3-1.in  lab3-1.ll  lab3-2.in  lab3-2.ll  lab3-3.in  lab3-4.in  lab3-4.ll  lab3-5.ll  lab3-5.ll.out  lab3-6.in  lab4-1.in  lab4-1.ll  lab4-2.in  lab4-2.ll  lab4-3.in  lab4-3.ll  lab4-4.in  lab4-4.ll  lab5-1.in  lab5-1.ll  lab5-2.in  lab5-2.ll  lab5-2.ll.out  lab5-3.in  lab5-4.in  lab5-4.ll  lab5-5.in  (+15 more)
